fix(core): use getDataFolder, lazy-load messages, harden FileUtils
Plugin lifecycle:
- Replaced the static `configDir = new File(user.dir + "/plugins/Ourstory")`
  with `getDataFolder()` set in onEnable. The previous path was both
  brittle (broke if the server was started from a different working
  directory) and case-mismatched with plugin.yml's `name: OurStory`,
  so on case-sensitive filesystems Bukkit and the plugin disagreed
  about where the data folder lived.
- Moved messages.json loading out of static initialization (which ran
  before onEnable, before the plugin's data folder was guaranteed to
  exist) into onEnable.
- Bundled messages.json as a resource and call saveResource on enable,
  so a fresh install gets a working default instead of failing
  silently.
- Expose a `Main.plugin` static for other classes that need a plugin
  reference (in follow-up commits).

FileUtils:
- The previous `filename.concat(".json")` calls were no-ops because
  String is immutable and the result was discarded. Removed; the
  extension is now the caller's responsibility.
- Added a path-traversal guard: filenames that resolve outside the
  configured data folder are rejected.
- Switched to `Files.readString` / `Files.writeString` (try-with-
  resources is unnecessary now; the FileWriter in writeRawFile leaked
  on exception before).
- Errors go to the Bukkit logger instead of System.err so they show
  up in server logs with proper formatting.

Permissions:
- Private constructor (was public-but-throwing), fix typo
  "instanciate" -> "instantiated".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>